--- a/package.json
+++ b/package.json
@@ -1,55 +1,49 @@
 {
-  "name": "whatsbox-sender",
-  "version": "0.1.0",
-  "private": true,
+  "name": "whatsbox",
+  "version": "1.0.0",
+  "description": "نظام إرسال رسائل واتساب باستخدام WhatsApp Web API",
+  "main": "server/index.js",
+  "scripts": {
+    "start": "node server/index.js",
+    "dev": "concurrently \"npm start\" \"react-scripts start\""
+  },
   "dependencies": {
-    "@adiwajshing/baileys": "^5.0.0",
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.0",
-    "@mui/x-data-grid": "^6.19.4",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.1",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "@supabase/supabase-js": "^2.49.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.4.0",
-    "chrome-finder": "^1.0.7",
-    "express": "^4.21.2",
-    "nodemon": "^3.0.1",
+    "@whiskeysockets/baileys": "^6.7.16",
+    "axios": "^1.9.0",
+    "body-parser": "^2.2.0",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "pino": "^9.6.0",
-    "puppeteer": "^24.7.2",
-    "puppeteer-core": "^24.7.2",
     "qrcode-terminal": "^0.12.0",
-    "qrcode.react": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "react-scripts": "5.0.1",
-    "read-excel-file": "^5.6.1",
-    "recharts": "^2.10.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-qr-code": "^2.0.15",
+    "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
+    "read-excel-file": "^5.2.0",
+    "recharts": "^2.8.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.2",
-    "stylis": "^4.2.0",
-    "stylis-plugin-rtl": "^2.1.1",
-    "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4",
-    "whatsapp-web.js": "^1.27.0"
+    "stylis": "^4.3.1",
+    "stylis-plugin-rtl": "^2.0.1",
+    "xlsx": "^0.18.5"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "nodemon server/index.js"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "keywords": [
+    "whatsapp",
+    "automation",
+    "messaging",
+    "bot"
+  ],
+  "author": "Osama Qazan",
+  "license": "MIT",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -62,5 +56,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
