--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@whiskeysockets/baileys": "^6.7.8",
     "axios": "^1.9.0",
     "body-parser": "^2.2.0",
-    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -35,6 +34,9 @@
     "stylis": "^4.3.1",
     "stylis-plugin-rtl": "^2.0.1",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   },
   "keywords": [
     "whatsapp",
