--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "qrcode-terminal": "^0.12.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
