--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@supabase/supabase-js": "^2.49.4",
-    "@whiskeysockets/baileys": "^6.7.8",
     "axios": "^1.9.0",
     "body-parser": "^2.2.0",
     "concurrently": "^8.2.2",
@@ -35,6 +34,7 @@
     "socket.io-client": "^4.7.2",
     "stylis": "^4.3.1",
     "stylis-plugin-rtl": "^2.0.1",
+    "whatsapp-web.js": "^1.31.0",
     "xlsx": "^0.18.5"
   },
   "keywords": [
